Try to fix issues with form on Safari v3

--- a/static/style/global.css
+++ b/static/style/global.css
@@ -10,6 +10,7 @@
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+    cursor: pointer;
 }
 
 a {
